...
            selectedLabelStyle: const TextStyle(fontSize: 11, fontWeight: FontWeight.w700),
            unselectedLabelStyle: const TextStyle(fontSize: 11, fontWeight: FontWeight.w500),
            items: const [
              BottomNavigationBarItem(icon: Icon(Icons.directions_run), label: 'Pasos'),
              BottomNavigationBarItem(icon: Icon(Icons.fitness_center), label: 'Gimnasio'),
               BottomNavigationBarItem(
                  key: ValueKey('bottomNavTracking'),
                  icon: Icon(Icons.live_tv),
                  label: 'Tracking',
                ),
              BottomNavigationBarItem(icon: Icon(Icons.chat_bubble_outline), label: 'Chat'),
              BottomNavigationBarItem(icon: Icon(Icons.menu), label: 'Menú'),
            ],
...
